Arreglé los problemas que se habian generado en la lógica para mostrar Twitter.

--- a/app/views/shared/_form_twitter.html.erb
+++ b/app/views/shared/_form_twitter.html.erb
@@ -1,5 +1,1 @@
-    <div id="form-twitter-legislador" class="threecol last">
-        <iframe src="https://docs.google.com/spreadsheet/embeddedform?formkey=dEo0TzVDZTBZek5zODZtNXIxNGVXSWc6MQ" height="625" width="100%" frameborder="0" marginheight="0" marginwidth="0">
-         Cargando...
-        </iframe>
-    </div>
+<dt>Twitter: </dt><dd><a id="form-twitter-legislador" href="https://docs.google.com/spreadsheet/embeddedform?formkey=dEo0TzVDZTBZek5zODZtNXIxNGVXSWc6MQ">Conocés el usuario de este diputado?</a></dd>
