agrego copy corregidos para home y quienes somos

--- a/app/views/static/home.erb
+++ b/app/views/static/home.erb
@@ -1,7 +1,7 @@
 <div class="twelvecol">
   <div id="objetivo-proyecto" class="twelvecol">
-    <h1>Contribuimos con la transparencia de la actividad legislativa argentina</h1>
-    <p>Estamos <strong>facilitando el acceso a la informaci&oacute;n</strong> que publica en Internet el Congreso de la Naci&oacute;n y <strong>construyendo un espacio de di&aacute;logo</strong> para los periodistas, investigadores, militantes y todas las personas interesadas en participar m&aacute;s activamente de la vida democr&aacute;tica</p>
+    <h1>Mejorar la transparencia legislativa</h1>
+    <p>Congreso Interactivo re&uacute;ne la informaci&oacute;n que publica en internet el Congreso de la Naci&oacute;n, simplificando su acceso y utilizaci&oacute;n. Queremos que sea un espacio de di&aacute;logo en el que confluyan periodistas, investigadores, activistas y todas aquellas personas interesadas en participar de manera m&aacute;s activa en la vida democr&aacute;tica.</p>
   </div>
   <div class="eightcol">
     <ul id="estadisticas-generales">
@@ -32,7 +32,8 @@
     </ul>
   </div>
   <div id="sidebar" class="fourcol last">
-    <h2>Como colaborar</h2>
-    <p>Congreso interactivo está impulsado por un grupo de profesionales entusiastas interesados por la transparencia legislativa. No somos una organización sin fines de lucro, pero tampoco buscamos lucrar con el proyecto. Nuevo copy de quienes somos es necesario</p>
+    <h2>Sumate</h2>
+    <p><strong>Congreso Interactivo</strong> es un proyecto abierto y hecho a pulm&oacute;n donde pod&eacute;s ayudar de maneras muy diversas: <strong>dise&ntilde;o</strong>, <strong>desarrollo</strong>, <strong>comunicaci&oacute;n</strong>, <strong>pedagog&iacute;a</strong>, etc. Si te interesa la transparencia pol&iacute;tica y quer&eacute;s hacer algo desde tu lugar, te invitamos a <a href="#">contactarnos</a></p>
+    
   </div>
 </div>
