--- a/app/views/static/quienes_somos.html.erb
+++ b/app/views/static/quienes_somos.html.erb
@@ -1,22 +1,19 @@
 <div id="contenido" class="eightcol">
-  <h1>Quienes Somos - Lista en Beta</h1>
-  <p>Congreso interactivo está impulsado por un grupo de profesionales entusiastas interesados por la transparencia legislativa. No somos una organización sin fines de lucro, no somos partidarios. Nuevo copy de quienes somos es necesario.</p>
+  <h1>Quienes Somos</h1>
+  <p>Somos un grupo de dise&ntilde;adores, desarrolladores y comunicadores independientes, interesados en construir herramientas que abran las puertas a una democracia m&aacute;s transparente y participativa.</p>
+  <p>Aunque venimos de lugares distintos y con diferentes posturas frente al mundo, todos compartimos la idea de que gracias a internet se pueden crear nuevas y mejores formas de interacci&oacute;n entre la sociedad y el estado.</p>
   
   
-  <h2>Committers</h2>
+  <h2>Colaboradores Actuales</h2>
   <ul>
-    <li><a href="#">Ernesto Tagwerker</a></li>  
-    <li><a href="#">Damián Calderón</a></li>
-    <li><a href="#">Sebastián Zelonka</a></li>  
-    <li><a href="#">Betina García</a></li>  
-    <li><a href="#">José Allona</a></li>  
-    <li><a href="#">Martín Szyszlican</a></li>  
-    <li><a href="#">Santiago</a></li>  
-  </ul>
-  
-  <h2>Colaboradores</h2>
-  <ul>
-    <li><a href="#">Enrique Stanziola</a></li>  
+    <li><a href="#">Jos&eacute; Allona</a></li>
+    <li><a href="#">Dami&aacute;n Calder&oacute;n</a></li>
+    <li><a href="#">Betina Garc&iacute;a</a></li>
+    <li><a href="#">Enrique Stanziola</a></li>
+    <li><a href="#">Mart&iacute;n Szyszlican</a></li>
+    <li><a href="#">Ernesto Tagwerker</a></li>
+    <li><a href="#">Santiago V&aacute;zquez</a></li>  
+    <li><a href="#">Sebasti&aacute;n Zelonka</a></li>  
     <li><a href="#">Tess</a></li>  
   </ul>
   
@@ -29,6 +26,6 @@
   </ul>
 </div>
 <div id="sidebar" class="fourcol last">
-  <h2>Como colaborar</h2>
-  <p>Congreso interactivo está impulsado por un grupo de profesionales entusiastas interesados por la transparencia legislativa. No somos una organización sin fines de lucro, pero tampoco buscamos lucrar con el proyecto. Nuevo copy de quienes somos es necesario</p>
+  <h2>Sumate</h2>
+  <p><strong>Congreso Interactivo</strong> es un proyecto abierto y hecho a pulm&oacute;n donde pod&eacute;s ayudar de maneras muy diversas: <strong>dise&ntilde;o</strong>, <strong>desarrollo</strong>, <strong>comunicaci&oacute;n</strong>, <strong>pedagog&iacute;a</strong>, etc. Si te interesa la transparencia pol&iacute;tica y quer&eacute;s hacer algo desde tu lugar, te invitamos a <a href="#">contactarnos</a></p>
 </div>
