agrego algunos links que faltaban

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -43,8 +43,8 @@
           <p><strong>Congreso Interactivo 2011</strong> <a href="http://creativecommons.org/licenses/by-nc-sa/2.5/ar/"><img src="http://i.creativecommons.org/l/by-nc-sa/2.5/ar/80x15.png"/></a></p>
             <ul class="clearfix">
                 <li><a href="/quienes-somos">Quienes somos</a></li>
-                <li><a href="#">Metodología</a></li>
-                <li><a href="https://github.com/etagwerker/ci-web/">GitHub</a></li>
+                <li><a href="#">Metodolog&iacute;a</a></li>
+                <li><a href="https://github.com/etagwerker/ci-web/">GitHub (para desarrolladores)</a></li>
                 <li><a id="form-sumate" href="https://docs.google.com/spreadsheet/embeddedform?formkey=dFRmSjdsTkxoallYYmdDNjUtVlllZ3c6MQ">Sumate</a></li>
             </ul>
         </div>
