--- a/app/views/static/home.erb
+++ b/app/views/static/home.erb
@@ -33,7 +33,7 @@
   </div>
   <div id="sidebar" class="fourcol last">
     <h2>Sumate</h2>
-    <p><strong>Congreso Interactivo</strong> es un proyecto abierto y hecho a pulm&oacute;n donde pod&eacute;s ayudar de maneras muy diversas: <strong>dise&ntilde;o</strong>, <strong>desarrollo</strong>, <strong>comunicaci&oacute;n</strong>, <strong>pedagog&iacute;a</strong>, etc. Si te interesa la transparencia pol&iacute;tica y quer&eacute;s hacer algo desde tu lugar, te invitamos a <a href="#">contactarnos</a></p>
+    <p><strong>Congreso Interactivo</strong> es un proyecto abierto y hecho a pulm&oacute;n donde pod&eacute;s ayudar de maneras muy diversas: <strong>dise&ntilde;o</strong>, <strong>desarrollo</strong>, <strong>comunicaci&oacute;n</strong>, <strong>pedagog&iacute;a</strong>, etc. Si te interesa la transparencia pol&iacute;tica y quer&eacute;s hacer algo desde tu lugar, te invitamos a <a href="https://docs.google.com/spreadsheet/embeddedform?formkey=dFRmSjdsTkxoallYYmdDNjUtVlllZ3c6MQ">contactarnos</a></p>
     
   </div>
 </div>
