--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -38,7 +38,7 @@
 </ul>
 <div id="votos">
 <%if @project.votes.count == 0 %>
-  <h3>(Todavía no se votó)</h3>
+  <h3>Todavía no se votó, o la votación no está disponible en el sitio</h3>
 <% else %>
  <table class="tabla-funcionarios">
     <thead>
