mejoré la redacción de los títulos

--- a/app/views/senators/index.html.erb
+++ b/app/views/senators/index.html.erb
@@ -1,4 +1,4 @@
-<h1>Senadores</h1>
+<h1>Senadores de la República Argentina</h1>
 <div class="clearfix">
     
     <div id="facetas" class="twocol">
