--- a/app/views/diputados/index.html.erb
+++ b/app/views/diputados/index.html.erb
@@ -1,4 +1,4 @@
-<h1>Diputados</h1>
+<h1>Diputados de la República Argentina</h1>
     <div class="row">      
     </div>
     <div id="facetas" class="twocol">
@@ -10,5 +10,5 @@
       <%if defined?(@filter)%>
       <%= render :partial => 'shared/mensaje', :locals => {:distritos => @filter[:distritos], :bloques => @filter[:bloques]}%>
       <% end %>
-      <%= render :partial => 'shared/politicians', :locals => {:personas => @diputados}%>
+       <%= render :partial => 'shared/politicians', :locals => {:personas => @diputados}%>
     </div>
