--- a/app/views/political_parties/index.html.erb
+++ b/app/views/political_parties/index.html.erb
@@ -1,10 +1,4 @@
-  <% if request.path == '/' %>
-  <h2>Bloques</h2>
-  <% else %>
-  <h1>Bloques</h1>
-<% end %>
-
-
+  <h1>Bloques del Congreso de la Nación Argentina</h1>
 
 <table>
   <tr>
