Agregué un google search form para el sitio.

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -41,6 +41,13 @@
                    </li>
                 </ul>
             </div>
+            <form method="get" action="http://www.google.com/search">
+              <input type="text" name="q" maxlength="255" />
+              <input type="submit" value="Google Search" />
+              <input type="hidden" name="domains" value="*.congresointeractivo.org" />
+              <input style="visibility:hidden" type="radio" name="sitesearch" value="*.congresointeractivo.org" checked="checked" />
+            </form>
+            
        </div>
     </div>
     <div class="row">
