#16 cambiar Tess por Teresa Alberto

--- a/app/views/static/quienes_somos.html.erb
+++ b/app/views/static/quienes_somos.html.erb
@@ -14,7 +14,7 @@
     <li><a href="#">Ernesto Tagwerker</a></li>
     <li><a href="#">Santiago V&aacute;zquez</a></li>  
     <li><a href="#">Sebasti&aacute;n Zelonka</a></li>  
-    <li><a href="#">Tess</a></li>  
+    <li><a href="#">Teresa Alberto</a></li>  
   </ul>
   
   <h2>Antiguos colaboradores</h2>
