diseño para buscador de google en ff y safari

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -41,9 +41,10 @@
                    </li>
                 </ul>
             </div>
-            <form method="get" action="http://www.google.com/search">
-              <input type="text" name="q" maxlength="255" />
-              <input type="submit" value="Google Search" />
+            
+            <form method="get" action="http://www.google.com/search" id="buscar" >
+              <input type="text" name="q" maxlength="255" value="Proyectos de ley, senadores, diputados" class="input-text" />
+              <input type="submit" value="Buscar" class="input-button" />
               <input type="hidden" name="domains" value="*.congresointeractivo.org" />
               <input style="visibility:hidden" type="radio" name="sitesearch" value="*.congresointeractivo.org" checked="checked" />
             </form>
