Cambio el enlace github en el footer (issue #15)

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -62,7 +62,7 @@
             <ul class="clearfix">
                 <li><a href="/quienes-somos">Quienes somos</a></li>
                 <li><a href="#">Metodolog&iacute;a</a></li>
-                <li><a href="https://github.com/etagwerker/ci-web/">GitHub (para desarrolladores)</a></li>
+                <li><a href="https://github.com/congresointeractivo/ci-web/">GitHub (para desarrolladores)</a></li>
                 <li><a id="form-sumate" href="https://docs.google.com/spreadsheet/embeddedform?formkey=dFRmSjdsTkxoallYYmdDNjUtVlllZ3c6MQ">Sumate</a></li>
             </ul>
         </div>
