CORRECCION. NO se puede usar un path relativo, porque genera excepciones de paths distintos de / .

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,7 +5,7 @@
 <head>
   <title>Congreso Interactivo</title>
   <link rel="author" href="humans.txt" />
-  <link rel="icon" href="favicon.ico" type="image/x-icon">
+  <link rel="icon" href="http://beta.congresointeractivo.org/favicon.ico" type="image/x-icon">
   <%= stylesheet_link_tag :all %>
   <%= stylesheet_link_tag "../javascripts/jquery-ui-1.8.16.custom/css/ci-theme/jquery-ui-1.8.16.custom.css" %>
   <%= javascript_include_tag  "http://ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.min.js", "jquery.colorbox-min.js", "modales.js", "chosen.jquery.min.js", 'css3-mediaqueries.js','jquery.dataTables.min.js', "application.js", "columnizer.js", "jquery-ui-1.8.16.custom/js/jquery-ui-1.8.16.custom.min.js" %>
